--- a/iletisim.html
+++ b/iletisim.html
@@ -50,7 +50,7 @@
   </header>
   <!-- Navbar end -->
   <div id="iletisim" class="iletişim">
-    <form action="Php/iletisim.php" method="POST" name="Form" onsubmit="return isItEmpty()" style="margin-top: 20px; padding: 20px; text-align: center; background-color: white; margin-right: 20%; margin-left: 20%; border: 1px solid black;border-left: 15px solid #386f94; border-radius: 5px;">	
+    <form action="Php/iletisim.php" method="POST" data-netlify="true" name="Form" onsubmit="return isItEmpty()" style="margin-top: 20px; padding: 20px; text-align: center; background-color: white; margin-right: 20%; margin-left: 20%; border: 1px solid black;border-left: 15px solid #386f94; border-radius: 5px;">	
       <div class="row">
         <div class="col">
           <div class="input-group">
